backing up again

--- a/kitchen_header.html
+++ b/kitchen_header.html
@@ -1,4 +1,5 @@
 <header>
-	<h1>Sandwich Masters Ltd<a id='hid' href='admin.php'>.</a></h1>
-	<h3>Welcome to the kitchen!</h3>
+	<h1 id='title'>Sandwich Masters Ltd<a id='hid' href='admin.php'>.</a></h1>
+	<h3 id='subtitle'>Sandwich solutions all day long</h3>
+	<hr>
 </header>
