--- a/nav.html
+++ b/nav.html
@@ -1,10 +1,10 @@
 <nav>
-	<h2>Links</h2>
+<!--	<h2>Links</h2> -->
 	<ul>
 	<li><a href='home.php'>Home</a></li>
 	<li><a href='window.php'>The Window</a></li>
 	<li><a href='kitchen.php'>The Kitchen</a></li>
-	<li><a href='signup.php'>Sign Up</a></li>
+	<li><a href='signin.php'>Sign In</a></li>
 	<li><a href='legal.html'>Legal</a></li>
 	</ul>
 </nav>
